mothercodesbest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: mothercodesbest
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - mothercodesbest.dev
      secretName: ingress-tls
  rules:
    - host: mothercodesbest.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  namespace: mothercodesbest
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target:  https://mothercodesbest.dev$request_uri
spec:
  tls:
    - hosts:
      - www.mothercodesbest.dev
      secretName: ingress-tls
  rules:
    - host: www.mothercodesbest.dev
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: frontend
              port:
                number: 80
